更新habse/kafka相关内容